update content and data

--- a/data/cities/belfast/hannaford.yml
+++ b/data/cities/belfast/hannaford.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Belfast
 street: "Lincolnville Avenue"
 housenumber: 93
-phone: ""
+phone: "+1 207-338-5377"
 opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
-website: "https://www.hannaford.com/custserv/store_detail.jsp?viewStoreId=21056"
+website: "https://stores.hannaford.com/me/belfast/8241"
