--- a/data/cities/boothbay-harbor/hannaford-supermarket-boothbay-harbor-180-townsend-avenue-boothbay-harbor.yml
+++ b/data/cities/boothbay-harbor/hannaford-supermarket-boothbay-harbor-180-townsend-avenue-boothbay-harbor.yml
@@ -6,6 +6,6 @@ postcode: "04538"
 city: Boothbay Harbor
 street: "Townsend Avenue"
 housenumber: 180
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-633-6465"
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/boothbay-harbor/8143"
