--- a/data/cities/caribou/hannaford.yml
+++ b/data/cities/caribou/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04736"
 city: Caribou
 street: "High Street"
 housenumber: 114
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-498-8824"
+opening_hours: "Mo-Sa 07:00-21:00; Su 08:00-20:00"
+website: "https://stores.hannaford.com/me/caribou/8438"
