--- a/data/cities/east-boothbay/east-boothbay-general-store.yml
+++ b/data/cities/east-boothbay/east-boothbay-general-store.yml
@@ -3,7 +3,7 @@ type: way
 latitude: 43.86297
 longitude: -69.58551
 postcode: "04544"
-city: Boothbay
+city: East Boothbay
 street: "Ocean Point Road"
 housenumber: 255
 phone: "+1-207-633-7800"
