--- a/data/cities/mechanic-falls/hannaford.yml
+++ b/data/cities/mechanic-falls/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04256"
 city: Mechanic Falls
 street: "Pigeon Hill Road"
 housenumber: 50
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-998-2660"
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/mechanic-falls/8445"
