--- a/data/cities/oxford/hannaford.yml
+++ b/data/cities/oxford/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04270"
 city: Oxford
 street: "Main Street"
 housenumber: 1603
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-743-2522"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/oxford/8338"
