--- a/data/cities/palmyra/hannaford.yml
+++ b/data/cities/palmyra/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04965"
 city: Palmyra
 street: "Moosehead Trail"
 housenumber: 44
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-368-4733"
+opening_hours: "Mo-Sa 07:00-21:00; Su 07:00-20:00"
+website: "https://stores.hannaford.com/me/newport/8443"
