--- a/data/cities/portland/trader-joes.yml
+++ b/data/cities/portland/trader-joes.yml
@@ -6,6 +6,6 @@ postcode: "04101"
 city: Portland
 street: "Marginal Way"
 housenumber: 87
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-699-3799"
+opening_hours: "Mo-Su 08:00-21:00"
+website: "https://locations.traderjoes.com/me/portland/519/"
