--- a/data/cities/sanford/hannaford.yml
+++ b/data/cities/sanford/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04073"
 city: Sanford
 street: "Main Street"
 housenumber: 800
-phone: "+1-207-324-1554"
+phone: "+1 207-324-1554"
 opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
-website: "https://www.hannaford.com/locations/sanford-hannaford-20770"
+website: "https://stores.hannaford.com/me/sanford/8390"
