--- a/data/cities/south-portland/hannaford.yml
+++ b/data/cities/south-portland/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04106"
 city: South Portland
 street: "Cottage Road"
 housenumber: 50
-phone: ""
+phone: "+1 207-799-7359"
 opening_hours: "Mo-Sa 07:00-23:00, Su 07:00-21:00"
-website: ""
+website: "https://stores.hannaford.com/me/south-portland/8279"
