--- a/data/cities/waldoboro/hannaford-supermarket-waldoboro-17-kalers-corner-waldoboro.yml
+++ b/data/cities/waldoboro/hannaford-supermarket-waldoboro-17-kalers-corner-waldoboro.yml
@@ -6,6 +6,6 @@ postcode: "04572"
 city: Waldoboro
 street: "Kalers Corner"
 housenumber: 17
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-832-4358"
+opening_hours: "Mo-Sa 07:00-21:00; Su 07:00-20:00"
+website: "https://stores.hannaford.com/me/waldoboro/8294"
