--- a/data/cities/waterville/hannaford.yml
+++ b/data/cities/waterville/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04901"
 city: Waterville
 street: "Elm Plaza"
 housenumber: 140
-phone: "+1-207-877-0700"
+phone: "+1 207-877-0700"
 opening_hours: "Mo-Sa 07:00-23:00; Su 07:00-21:00"
-website: "https://www.hannaford.com/"
+website: "https://stores.hannaford.com/me/waterville/8229"
