--- a/data/cities/windham/hannaford.yml
+++ b/data/cities/windham/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04062"
 city: Windham
 street: "Roosevelt Trail"
 housenumber: 803
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-892-2532"
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/north-windham/8345"
