--- a/data/cities/auburn/hannaford.yml
+++ b/data/cities/auburn/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04210"
 city: Auburn
 street: "Spring Street"
 housenumber: 95
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-784-6497"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/auburn/8347"
