--- a/data/cities/augusta/hannaford.yml
+++ b/data/cities/augusta/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: "Whitten Road"
 housenumber: 29
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-622-3137"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/augusta/8239"
