--- a/data/cities/bangor/hannaford.yml
+++ b/data/cities/bangor/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
 housenumber: 773
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-947-6735"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/bangor/8110"
