--- a/data/cities/bar-harbor/hannaford.yml
+++ b/data/cities/bar-harbor/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04609"
 city: Bar Harbor
 street: "Cottage Street"
 housenumber: 86
-phone: "+1-207-288-5680"
+phone: "+1 207-288-5680"
 opening_hours: "Mo-Sa 07:00-21:00; Su 08:00-20:00; Jun 21-Sep 21 07:00-23:00; Nov Th[4] off; Dec 25 off"
-website: "https://www.hannaford.com/custserv/store_detail.jsp?viewStoreId=21051"
+website: "https://stores.hannaford.com/me/bar-harbor/8224"
