--- a/data/cities/biddeford/hannaford.yml
+++ b/data/cities/biddeford/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04005"
 city: Biddeford
 street: "Elm Street"
 housenumber: 313
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-284-8677"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/biddeford/8225"
