--- a/data/cities/brewer/hannaford.yml
+++ b/data/cities/brewer/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04412"
 city: Brewer
 street: "Wilson Street"
 housenumber: 383
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-989-2500"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/brewer/8173"
