--- a/data/cities/bridgton/hannaford.yml
+++ b/data/cities/bridgton/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04009"
 city: Bridgton
 street: "Portland Road"
 housenumber: 109
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-647-2015"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/bridgton/8167"
