--- a/data/cities/brunswick/hannaford.yml
+++ b/data/cities/brunswick/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: "Elm Street"
 housenumber: 35
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-725-6683"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/brunswick/8231"
