--- a/data/cities/bucksport/hannaford.yml
+++ b/data/cities/bucksport/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04416"
 city: Bucksport
 street: "Route 1"
 housenumber: 53
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-469-3282"
+opening_hours: "Mo-Sa 07:00-21:00; Su 07:00-20:00"
+website: "https://stores.hannaford.com/me/bucksport/8152"
