--- a/data/cities/buxton/hannaford.yml
+++ b/data/cities/buxton/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04093"
 city: Buxton
 street: "Hannaford Drive"
 housenumber: 21
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-929-3100"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/buxton/8226"
