--- a/data/cities/camden/hannaford.yml
+++ b/data/cities/camden/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04843"
 city: Camden
 street: "Elm Street"
 housenumber: 145
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-236-8577"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/camden/8151"
