--- a/data/cities/china/hannaford.yml
+++ b/data/cities/china/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04358"
 city: China
 street: "Hannaford Drive"
 housenumber: 33
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-445-3385"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/china/8287"
