--- a/data/cities/east-waterboro/hannaford.yml
+++ b/data/cities/east-waterboro/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04030"
 city: East Waterboro
 street: "Sokokis Trail"
 housenumber: 20
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-247-8000"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/east-waterboro/8221"
