--- a/data/cities/farmington/hannaford.yml
+++ b/data/cities/farmington/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04938"
 city: Farmington
 street: "Hannaford Drive"
 housenumber: 131
-phone: "+1-207-778-0434"
-opening_hours: ""
-website: ""
+phone: "+1 207-778-0434"
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/farmington/8291"
