--- a/data/cities/gardiner/hannaford.yml
+++ b/data/cities/gardiner/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04345"
 city: Gardiner
 street: "Main Avenue"
 housenumber: 40
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-582-3470"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/gardiner/8220"
