--- a/data/cities/gorham/hannaford.yml
+++ b/data/cities/gorham/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04038"
 city: Gorham
 street: "Main Street"
 housenumber: 99
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-839-6553"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/gorham/8350"
