--- a/data/cities/hampden/hannaford.yml
+++ b/data/cities/hampden/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04444"
 city: Hampden
 street: "Western Avenue"
 housenumber: 77
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-862-5444"
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/hampden/8417"
