--- a/data/cities/lewiston/hannaford.yml
+++ b/data/cities/lewiston/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04240"
 city: Lewiston
 street: "Sabattus Street"
 housenumber: 692
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-784-0721"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/lewiston/8265"
