--- a/data/cities/machias/hannaford.yml
+++ b/data/cities/machias/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04654"
 city: Machias
 street: "Dublin Street"
 housenumber: 149
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-255-3201"
+opening_hours: "Mo-Sa 07:00-21:00; Su 07:00-20:00"
+website: "https://stores.hannaford.com/me/machias/8128"
