--- a/data/cities/madison/hannaford-supermarket-madison-225-upper-main-street-madison.yml
+++ b/data/cities/madison/hannaford-supermarket-madison-225-upper-main-street-madison.yml
@@ -6,6 +6,6 @@ postcode: "04950"
 city: Madison
 street: "Main Street"
 housenumber: 225
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-696-3949"
+opening_hours: "Mo-Su 07:00-20:00"
+website: "https://stores.hannaford.com/me/madison/8254"
