--- a/data/cities/millinocket/hannaford.yml
+++ b/data/cities/millinocket/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04462"
 city: Millinocket
 street: "Central Street"
 housenumber: 843
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-723-8047"
+opening_hours: "Mo-Sa 07:00-21:00; Su 08:00-20:00"
+website: "https://stores.hannaford.com/me/millinocket/8155"
