--- a/data/cities/north-berwick/hannaford-supermarket-north-berwick-23-somersworth-road-north-berwick.yml
+++ b/data/cities/north-berwick/hannaford-supermarket-north-berwick-23-somersworth-road-north-berwick.yml
@@ -6,6 +6,6 @@ postcode: "03906"
 city: North Berwick
 street: "Somersworth Road"
 housenumber: 23
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-676-2177"
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/north-berwick/8437"
