--- a/data/cities/portland/whole-foods-market.yml
+++ b/data/cities/portland/whole-foods-market.yml
@@ -6,6 +6,6 @@ postcode: "04101"
 city: Portland
 street: "Somerset Street"
 housenumber: 2
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-774-7711"
+opening_hours: "Mo-Su 08:00-22:00"
+website: "https://www.wholefoodsmarket.com/stores/portland-me"
