--- a/data/cities/rockland/hannaford.yml
+++ b/data/cities/rockland/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04841"
 city: Rockland
 street: "Maverick Street"
 housenumber: 75
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-594-2173"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/rockland/8230"
