--- a/data/cities/rumford/hannaford.yml
+++ b/data/cities/rumford/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04276"
 city: Rumford
 street: "Waldo Street"
 housenumber: 520
-phone: "+1-207-364-3771"
-opening_hours: ""
-website: ""
+phone: "+1 207-364-3771"
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/rumford/8358"
