--- a/data/cities/saco/hannaford.yml
+++ b/data/cities/saco/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04072"
 city: Saco
 street: "Main Street"
 housenumber: 532
-phone: "+1-207-282-4131"
-opening_hours: ""
-website: ""
+phone: "+1 207-282-4131"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/saco/8138"
