--- a/data/cities/scarborough/hannaford.yml
+++ b/data/cities/scarborough/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04074"
 city: Scarborough
 street: "Hannaford Drive"
 housenumber: 31
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-883-7670"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/scarborough/8342"
