--- a/data/cities/skowhegan/hannaford.yml
+++ b/data/cities/skowhegan/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04976"
 city: Skowhegan
 street: "Madison Avenue"
 housenumber: 496
-phone: "+1-207-858-4800"
-opening_hours: ""
-website: ""
+phone: "+1 207-858-4800"
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/skowhegan/8330"
