--- a/data/cities/standish/hannaford.yml
+++ b/data/cities/standish/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04084"
 city: Standish
 street: "Colonial Drive"
 housenumber: 71
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-642-5533"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/standish/8349"
