--- a/data/cities/wells/hannaford.yml
+++ b/data/cities/wells/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04090"
 city: Wells
 street: "Wells Plaza"
 housenumber: 107
-phone: ""
+phone: "+1 207-646-4111"
 opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
-website: ""
+website: "https://stores.hannaford.com/me/wells/8389"
