--- a/data/cities/westbrook/hannaford.yml
+++ b/data/cities/westbrook/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04092"
 city: Westbrook
 street: "Hannaford Drive"
 housenumber: 7
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-854-4631"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/westbrook/8223"
