--- a/data/cities/winthrop/hannaford.yml
+++ b/data/cities/winthrop/hannaford.yml
@@ -7,5 +7,5 @@ city: Winthrop
 street: "Main Street"
 housenumber: 399
 phone: "+1 207-377-3150"
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/winthrop/8289"
