update content and data

--- a/data/cities/eastport/iga.yml
+++ b/data/cities/eastport/iga.yml
@@ -6,6 +6,6 @@ postcode: "04631"
 city: Eastport
 street: "Washington Street"
 housenumber: 88
-phone: ""
+phone: "+1 207-762-5151"
 opening_hours: ""
 website: ""
