--- a/data/cities/lubec/iga.yml
+++ b/data/cities/lubec/iga.yml
@@ -6,6 +6,6 @@ postcode: "04652"
 city: Lubec
 street: "Washington Street"
 housenumber: 82
-phone: ""
+phone: "+1 631-765-3040"
 opening_hours: ""
 website: ""
