--- a/data/cities/orono/bells-iga.yml
+++ b/data/cities/orono/bells-iga.yml
@@ -6,6 +6,6 @@ postcode: "04473"
 city: Orono
 street: "Stillwater Avenue"
 housenumber: 6
-phone: ""
+phone: "+1 207-762-5151"
 opening_hours: "Mo-Sa 07:00-21:00; Su 08:00-20:00"
 website: ""
