--- a/data/cities/southwest-harbor/iga.yml
+++ b/data/cities/southwest-harbor/iga.yml
@@ -6,6 +6,6 @@ postcode: "04679"
 city: Southwest Harbor
 street: "Main Street"
 housenumber: 101
-phone: ""
+phone: "+1 843-567-3565"
 opening_hours: ""
 website: ""
