--- a/data/cities/wells/wells-superfood-market-iga.yml
+++ b/data/cities/wells/wells-superfood-market-iga.yml
@@ -6,6 +6,6 @@ postcode: "04090"
 city: Wells
 street: "Post Road"
 housenumber: 1517
-phone: ""
+phone: "+1 631-765-3040"
 opening_hours: ""
 website: ""
