update content and data

--- a/data/cities/auburn/dollar-general.yml
+++ b/data/cities/auburn/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Minot Avenue"
 housenumber: 807
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/auburn/15441"
