--- a/data/cities/eddington/dollar-general.yml
+++ b/data/cities/eddington/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Main Road"
 housenumber: 1030
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/eddington/17353"
