--- a/data/cities/gray/dollar-general.yml
+++ b/data/cities/gray/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Portland Road"
 housenumber: 5
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/gray/19141"
