--- a/data/cities/kingfield/dollar-general.yml
+++ b/data/cities/kingfield/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 417
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/kingfield/18475"
