--- a/data/cities/kittery/walgreens.yml
+++ b/data/cities/kittery/walgreens.yml
@@ -8,4 +8,4 @@ street: "Shapleigh Road"
 housenumber: 15
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-15+shapleigh+rd-kittery-me-03904/id=19330"
