--- a/data/cities/limerick/dollar-general.yml
+++ b/data/cities/limerick/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Washington Street"
 housenumber: 138
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/limerick/16771"
