--- a/data/cities/livermore/dollar-general.yml
+++ b/data/cities/livermore/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Federal Road"
 housenumber: 1504
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/livermore/17961"
