--- a/data/cities/manchester/dollar-general.yml
+++ b/data/cities/manchester/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Western Avenue"
 housenumber: 1022
 phone: "+1 207 466 1537"
 opening_hours: ""
-website: "https://www.dollargeneral.com"
+website: "https://www.dollargeneral.com/store-directory/me/manchester/17317"
