--- a/data/cities/manchester/walgreens.yml
+++ b/data/cities/manchester/walgreens.yml
@@ -8,4 +8,4 @@ street: "Western Avenue"
 housenumber: 943
 phone: "+1-207-622-6598"
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-943+western+ave-manchester-me-04351/id=17990"
