--- a/data/cities/millinocket/dollar-general.yml
+++ b/data/cities/millinocket/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Central Street"
 housenumber: 720
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/millinocket/25421"
