--- a/data/cities/north-berwick/cumberland-farms.yml
+++ b/data/cities/north-berwick/cumberland-farms.yml
@@ -1,7 +1,7 @@
-id: 7172586711
-type: node
-latitude: 43.30454
-longitude: -70.73449
+id: 1016220532
+type: way
+latitude: 43.30464
+longitude: -70.73453
 postcode: "03906"
 city: North Berwick
 street: "Main Street"
