--- a/data/cities/north-waterboro/dollar-general.yml
+++ b/data/cities/north-waterboro/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Sokokis Trail"
 housenumber: 947
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/north-waterboro/16040"
