--- a/data/cities/oakland/dollar-general.yml
+++ b/data/cities/oakland/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Pullen Drive"
 housenumber: 7
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/oakland/15382"
