--- a/data/cities/alfred/dollar-general.yml
+++ b/data/cities/alfred/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Alfred Road"
 housenumber: 1502
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/lyman/15568"
