--- a/data/cities/auburn/walgreens-minot-avenue.yml
+++ b/data/cities/auburn/walgreens-minot-avenue.yml
@@ -8,4 +8,4 @@ street: "Minot Avenue"
 housenumber: 698
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-698+minot+ave-auburn-me-04210/id=19162"
