--- a/data/cities/augusta/dollar-general.yml
+++ b/data/cities/augusta/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Eastern Avenue"
 housenumber: 296
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/augusta/17235"
