--- a/data/cities/blue-hill/walgreens.yml
+++ b/data/cities/blue-hill/walgreens.yml
@@ -8,4 +8,4 @@ street: "South Street"
 housenumber: 17
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-17+south+st-blue+hill-me-04614/id=17708"
