--- a/data/cities/boothbay-harbor/walgreens.yml
+++ b/data/cities/boothbay-harbor/walgreens.yml
@@ -8,4 +8,4 @@ street: "Townsend Avenue"
 housenumber: 223
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-223+townsend+ave-boothbay+harbor-me-04538/id=19886"
