--- a/data/cities/bridgton/walgreens.yml
+++ b/data/cities/bridgton/walgreens.yml
@@ -8,4 +8,4 @@ street: "Portland Road"
 housenumber: 19
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-19+portland+rd-bridgton-me-04009/id=17364"
