--- a/data/cities/buxton/dollar-general.yml
+++ b/data/cities/buxton/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Narragansett Trail"
 housenumber: 432
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/buxton/15532"
