--- a/data/cities/caribou/dollar-general.yml
+++ b/data/cities/caribou/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Sweden Street"
 housenumber: 88
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/caribou/19140"
