--- a/data/cities/caribou/walgreens.yml
+++ b/data/cities/caribou/walgreens.yml
@@ -8,4 +8,4 @@ street: "Bennett Drive"
 housenumber: 112
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-112+bennett+dr-caribou-me-04736/id=18248"
