--- a/data/cities/cherryfield/dollar-general.yml
+++ b/data/cities/cherryfield/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Milbridge Road"
 housenumber: 163
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/cherryfield/20992"
