--- a/data/cities/gray/walgreens.yml
+++ b/data/cities/gray/walgreens.yml
@@ -8,4 +8,4 @@ street: "West Gray Road"
 housenumber: 62
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-62+w+gray+rd-gray-me-04039/id=19789"
