--- a/data/cities/harrington/dollar-general.yml
+++ b/data/cities/harrington/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Wilson District Road"
 housenumber: 20
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/harrington/17527"
