--- a/data/cities/limestone/dollar-general.yml
+++ b/data/cities/limestone/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Access Highway"
 housenumber: 87
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/limestone/19524"
