--- a/data/cities/limington/dollar-general.yml
+++ b/data/cities/limington/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Sokokis Avenue"
 housenumber: 491
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/limington/17003"
