--- a/data/cities/litchfield/dollar-general.yml
+++ b/data/cities/litchfield/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Hallowell Rd"
 housenumber: 1905
 phone: "207 241 5101"
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/litchfield/15760"
