--- a/data/cities/livermore-falls/dollar-general.yml
+++ b/data/cities/livermore-falls/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 82
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/livermore-falls/19143"
