--- a/data/cities/lubec/dollar-general.yml
+++ b/data/cities/lubec/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 122
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/lubec/22132"
