--- a/data/cities/milo/walgreens.yml
+++ b/data/cities/milo/walgreens.yml
@@ -8,4 +8,4 @@ street: "Park Street"
 housenumber: 35
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-35+park+st-milo-me-04463/id=19253"
