--- a/data/cities/morrill/dollar-general.yml
+++ b/data/cities/morrill/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Morrill Road"
 housenumber: 12
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/belmont/17356"
