--- a/data/cities/norway/walgreens.yml
+++ b/data/cities/norway/walgreens.yml
@@ -8,4 +8,4 @@ street: "Paris Street"
 housenumber: 53
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-53+paris+st-norway-me-04268/id=11416"
