--- a/data/cities/south-paris/dollar-general.yml
+++ b/data/cities/south-paris/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 259
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/south-paris/22813"
