--- a/data/cities/turner/dollar-general.yml
+++ b/data/cities/turner/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Buckfield Road"
 housenumber: 9
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/turner/15456"
