--- a/data/cities/waterville/cvs-pharmacy.yml
+++ b/data/cities/waterville/cvs-pharmacy.yml
@@ -8,4 +8,4 @@ street: "Kennedy Memorial Drive"
 housenumber: 1
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.cvs.com/store-locator/waterville-me-pharmacies/1-kennedy-memorial-dr-waterville-me-04901/storeid=620"
