--- a/data/cities/west-enfield/dollar-general.yml
+++ b/data/cities/west-enfield/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Hammett Road"
 housenumber: 10
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/west-enfield/17039"
