--- a/data/cities/westbrook/walgreens.yml
+++ b/data/cities/westbrook/walgreens.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 465
 phone: "+1-207-854-9103"
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-465+main+st-westbrook-me-04092/id=19078"
