--- a/data/cities/winterport/dollar-general.yml
+++ b/data/cities/winterport/dollar-general.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 779
 phone: ""
 opening_hours: "Mo-Su 08:00-22:00"
-website: ""
+website: "https://www.dollargeneral.com/store-directory/me/winterport/17826"
