--- a/data/cities/yarmouth/walgreens.yml
+++ b/data/cities/yarmouth/walgreens.yml
@@ -8,4 +8,4 @@ street: "Route 1"
 housenumber: 478
 phone: "+1 207-846-1222"
 opening_hours: "Mo-Su 08:00-21:00"
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-478+route+1-yarmouth-me-04096/id=19423"
