update content and data

--- a/data/cities/waterville/dollar-general-concourse-west.yml
+++ b/data/cities/waterville/dollar-general-concourse-west.yml
@@ -1,11 +1,11 @@
-id: 7201673683
-type: node
-latitude: 44.54946
-longitude: -69.63235
+id: 1267246849
+type: way
+latitude: 44.5495
+longitude: -69.63224
 postcode: "04901"
 city: Waterville
 street: "Concourse West"
-housenumber: 10
+housenumber: 14
 phone: ""
 opening_hours: ""
 website: ""
