--- a/data/cities/waterville/gorham-bike-and-ski.yml
+++ b/data/cities/waterville/gorham-bike-and-ski.yml
@@ -1,11 +1,11 @@
-id: 7201673683
-type: node
-latitude: 44.54946
-longitude: -69.63235
+id: 328285892
+type: way
+latitude: 44.55051
+longitude: -69.63172
 postcode: "04901"
 city: Waterville
 street: "Concourse West"
-housenumber: 10
+housenumber: 50
 phone: ""
 opening_hours: ""
 website: ""
