--- a/data/cities/waterville/yarngoods-center.yml
+++ b/data/cities/waterville/yarngoods-center.yml
@@ -1,11 +1,11 @@
-id: 7201673683
-type: node
-latitude: 44.54946
-longitude: -69.63235
+id: 328285896
+type: way
+latitude: 44.55059
+longitude: -69.63167
 postcode: "04901"
 city: Waterville
 street: "Concourse West"
-housenumber: 10
+housenumber: 60
 phone: ""
 opening_hours: ""
 website: ""
