--- a/data/cities/waterville/goodwill-concourse-west.yml
+++ b/data/cities/waterville/goodwill-concourse-west.yml
@@ -1,7 +1,7 @@
-id: 7201673683
-type: node
-latitude: 44.54946
-longitude: -69.63235
+id: 1267246850
+type: way
+latitude: 44.54968
+longitude: -69.63276
 postcode: "04901"
 city: Waterville
 street: "Concourse West"
