--- a/data/cities/waterville/save-a-lot-concourse-west.yml
+++ b/data/cities/waterville/save-a-lot-concourse-west.yml
@@ -1,11 +1,11 @@
-id: 7201673683
-type: node
-latitude: 44.54946
-longitude: -69.63235
+id: 1267246848
+type: way
+latitude: 44.54965
+longitude: -69.63209
 postcode: "04901"
 city: Waterville
 street: "Concourse West"
-housenumber: 10
+housenumber: 20
 phone: ""
 opening_hours: ""
 website: ""
