--- a/data/cities/yarmouth/oreilly-auto-parts.yml
+++ b/data/cities/yarmouth/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Route 1"
 housenumber: 940
 phone: "+1-207-846-4223"
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/me/yarmouth/autoparts-4539.html"
