--- a/data/cities/rockland/oreilly-auto-parts.yml
+++ b/data/cities/rockland/oreilly-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Camden Street"
 housenumber: 137
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.oreillyauto.com/me/rockland/autoparts-4523.html"
