--- a/data/cities/gray/hannaford.yml
+++ b/data/cities/gray/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04039"
 city: Gray
 street: "Shaker Road"
 housenumber: 130
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-657-5800"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
+website: "https://stores.hannaford.com/me/gray/8251"
