update content and data

--- a/data/cities/portland/fresh-approach-market.yml
+++ b/data/cities/portland/fresh-approach-market.yml
@@ -7,5 +7,5 @@ city: Portland
 street: "Brackett Street"
 housenumber: 155
 phone: "+1-207-774-7250"
-opening_hours: ""
+opening_hours: "Mo-Fr 08:00-19:00; Sa 09:00-19:00; Su 09:00-17:00"
 website: "https://www.freshapproachmarket.com/"
