--- a/data/cities/eliot/og-cannabis.yml
+++ b/data/cities/eliot/og-cannabis.yml
@@ -7,5 +7,5 @@ city: Eliot
 street: "American Way"
 housenumber: 18
 phone: ""
-opening_hours: "Mo-Su open at 08:30am"
+opening_hours: "Mo-Su 08:30+"
 website: ""
