--- a/data/cities/augusta/circle-k.yml
+++ b/data/cities/augusta/circle-k.yml
@@ -1,11 +1,11 @@
-id: 415174021
+id: 412430357
 type: way
-latitude: 44.30675
-longitude: -69.75166
+latitude: 44.31486
+longitude: -69.80405
 postcode: "04330"
 city: Augusta
-street: "Eastern Avenue"
-housenumber: 216
-phone: ""
+street: "Western Avenue"
+housenumber: 262
+phone: "+1-207-622-3406"
 opening_hours: ""
 website: ""
