update content and data

--- a/data/cities/oakland/lee-credit-now.yml
+++ b/data/cities/oakland/lee-credit-now.yml
@@ -1,7 +1,7 @@
-id: 7566918404
-type: node
-latitude: 44.54364
-longitude: -69.69278
+id: 1283756336
+type: way
+latitude: 44.54369
+longitude: -69.6928
 postcode: "04963"
 city: Oakland
 street: "Kennedy Memorial Drive"
