--- a/data/cities/scarborough/hannaford.yml
+++ b/data/cities/scarborough/hannaford.yml
@@ -1,11 +1,11 @@
-id: 960125043
+id: 1072912221
 type: way
-latitude: 43.62019
-longitude: -70.35109
+latitude: 43.59501
+longitude: -70.3321
 postcode: "04074"
 city: Scarborough
-street: "Payne Road"
-housenumber: 417
-phone: "+1 207-883-0096"
+street: "Hannaford Drive"
+housenumber: 31
+phone: "+1 207-883-7670"
 opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
-website: "https://stores.hannaford.com/me/scarborough/8451"
+website: "https://stores.hannaford.com/me/scarborough/8342"
