update content and data

--- a/data/cities/gray/lifetime-auto-repair.yml
+++ b/data/cities/gray/lifetime-auto-repair.yml
@@ -1,7 +1,7 @@
-id: 7176542316
-type: node
-latitude: 43.89483
-longitude: -70.32859
+id: 1285723762
+type: way
+latitude: 43.89496
+longitude: -70.32869
 postcode: "04039"
 city: Gray
 street: "Lewiston Road"
