update content and data

--- a/data/cities/auburn/runway-variety.yml
+++ b/data/cities/auburn/runway-variety.yml
@@ -6,6 +6,6 @@ postcode: "04210"
 city: Auburn
 street: "Hotel Road"
 housenumber: 2263
-phone: ""
+phone: "+1- 207-795-7726"
 opening_hours: ""
 website: ""
