--- a/data/cities/litchfield/applewald-farm.yml
+++ b/data/cities/litchfield/applewald-farm.yml
@@ -1,7 +1,7 @@
-id: 5965003727
-type: node
-latitude: 44.15344
-longitude: -69.97421
+id: 1287524770
+type: way
+latitude: 44.15352
+longitude: -69.974
 postcode: "04350"
 city: Litchfield
 street: "Huntington Hill Road"
