--- a/data/cities/veazie/tradewinds.yml
+++ b/data/cities/veazie/tradewinds.yml
@@ -7,5 +7,5 @@ city: Veazie
 street: "State Street"
 housenumber: 1215
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 06:00-21:00; Su 07:00-21:00"
 website: "https://www.tradewindsmarkets.com/"
