update content and data

--- a/data/cities/edgecomb/star-of-the-sea-home-decor.yml
+++ b/data/cities/edgecomb/star-of-the-sea-home-decor.yml
@@ -1,7 +1,7 @@
-id: 1188332325
-type: way
-latitude: 43.99948
-longitude: -69.65069
+id: 11992456491
+type: node
+latitude: 43.99947
+longitude: -69.65039
 postcode: "04556"
 city: Edgecomb
 street: "Route 1"
