--- a/data/cities/kittery/cuts-by-courtney.yml
+++ b/data/cities/kittery/cuts-by-courtney.yml
@@ -1,7 +1,7 @@
-id: 307234482
-type: way
-latitude: 43.08955
-longitude: -70.73707
+id: 12001575522
+type: node
+latitude: 43.08944
+longitude: -70.73709
 postcode: "03904"
 city: Kittery
 street: "Shapleigh Road"
