--- a/data/cities/scarborough/mercedes-benz-prime-motor-cars.yml
+++ b/data/cities/scarborough/mercedes-benz-prime-motor-cars.yml
@@ -6,6 +6,6 @@ postcode: "04074"
 city: Scarborough
 street: "Route 1"
 housenumber: 137
-phone: ""
+phone: "+12075102260"
 opening_hours: ""
-website: ""
+website: "https://www.mbofscarborough.com/"
