--- a/data/cities/waterville/sweet-dirt.yml
+++ b/data/cities/waterville/sweet-dirt.yml
@@ -6,6 +6,6 @@ postcode: "04901"
 city: Waterville
 street: "Kennedy Memorial Drive"
 housenumber: 475
-phone: ""
-opening_hours: ""
-website: "https://the-pinecone-gift-furniture-store.business.site/"
+phone: "+1-207-387-0661"
+opening_hours: "Su-Th 09:00-20:00; Fr-Sa 09:00-21:00"
+website: "https://www.sweetdirt.com"
