--- a/data/cities/ellsworth/aarons.yml
+++ b/data/cities/ellsworth/aarons.yml
@@ -7,5 +7,5 @@ city: Ellsworth
 street: "Downeast Highway"
 housenumber: 60
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Fr 11:00-19:00; Sa 10:00-17:00; Su closed"
+website: "https://locations.aarons.com/us/me/ellsworth/60-downeast-hwy"
