--- a/data/cities/waterville/aarons.yml
+++ b/data/cities/waterville/aarons.yml
@@ -7,5 +7,5 @@ city: Waterville
 street: "Jfk Plaza"
 housenumber: 60
 phone: "+12078725900"
-opening_hours: "Mo-Th 10:00-19:00, Fr 10:00-20:00, Sa 10:00-18:00, Su 12:00-17:00"
-website: "https://locations.aarons.com/us/me/waterville/60-jfk-plz?y_source=1_MTUzNTM1NjItNzE1LWxvY2F0aW9uLndlYnNpdGU%3D"
+opening_hours: "Mo-Th 10:00-19:00; Fr 10:00-20:00; Sa 10:00-18:00; Su closed"
+website: "https://locations.aarons.com/us/me/waterville/60-jfk-plz"
