update content and data

--- a/data/cities/brewer/lowes.yml
+++ b/data/cities/brewer/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04412"
 city: Brewer
 street: "Arista Drive"
 housenumber: 15
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-299-9039"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.lowes.com/store/me-brewer/2291"
