--- a/data/cities/waterville/tractor-supply-company.yml
+++ b/data/cities/waterville/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04901"
 city: Waterville
 street: "Jfk Plaza"
 housenumber: 10
-phone: "+12078777775"
+phone: "+1 207-877-7775"
 opening_hours: "Mo-Sa 08:00-21:00, Su 9:00-19:00"
 website: "https://www.tractorsupply.com/tsc/store_Waterville-ME-04901_1513"
