--- a/data/cities/auburn/lowes.yml
+++ b/data/cities/auburn/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04210"
 city: Auburn
 street: "Turner Street"
 housenumber: 650
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-514-2300"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.lowes.com/store/me-auburn/2514"
