--- a/data/cities/augusta/dicks-sporting-goods.yml
+++ b/data/cities/augusta/dicks-sporting-goods.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: "Stephen King Drive"
 housenumber: 80
-phone: "+1-207-622-3987"
-opening_hours: ""
-website: ""
+phone: "+1 207-622-3987"
+opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-19:00"
+website: "https://stores.dickssportinggoods.com/me/augusta/244/"
