--- a/data/cities/augusta/lowes.yml
+++ b/data/cities/augusta/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: "Crossing Way"
 housenumber: 53
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-620-5027"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.lowes.com/store/me-augusta/2265"
