--- a/data/cities/augusta/tractor-supply-company.yml
+++ b/data/cities/augusta/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: "Civic Center Drive"
 housenumber: 420
-phone: ""
-opening_hours: ""
+phone: "+1 207-621-2800"
+opening_hours: "Mo-Sa 08:00-21:00; Su 09:00-19:00"
 website: ""
