--- a/data/cities/bangor/lowes.yml
+++ b/data/cities/bangor/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Springer Drive"
 housenumber: 70
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-299-9089"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.lowes.com/store/me-bangor/1940"
