--- a/data/cities/bangor/tractor-supply-company.yml
+++ b/data/cities/bangor/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Broadway"
 housenumber: 1161
-phone: ""
-opening_hours: ""
+phone: "+1 207-947-9604"
+opening_hours: "Mo-Sa 08:00-21:00; Su 09:00-19:00"
 website: ""
