--- a/data/cities/brunswick/lowes.yml
+++ b/data/cities/brunswick/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: "Bath Road"
 housenumber: 250
-phone: "+1-207-373-7016"
-opening_hours: ""
-website: ""
+phone: "+1 207-373-7016"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-19:00"
+website: "https://www.lowes.com/store/me-brunswick/2536"
