--- a/data/cities/calais/tractor-supply-company.yml
+++ b/data/cities/calais/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04619"
 city: Calais
 street: "South Street"
 housenumber: 289
-phone: ""
-opening_hours: ""
+phone: "+1 207-454-0671"
+opening_hours: "Mo-Sa 08:00-21:00; Su 09:00-19:00"
 website: ""
