--- a/data/cities/ellsworth/country-store-antiques.yml
+++ b/data/cities/ellsworth/country-store-antiques.yml
@@ -7,5 +7,5 @@ city: Ellsworth
 street: "Bar Harbor Road"
 housenumber: 410
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 10:00-17:00"
 website: ""
