--- a/data/cities/ellsworth/tractor-supply-company.yml
+++ b/data/cities/ellsworth/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04605"
 city: Ellsworth
 street: "Mardens Way"
 housenumber: 33
-phone: ""
+phone: "+1 207-664-2203"
 opening_hours: "Mo-Sa 08:00-21:00, Su 08:00-17:00"
 website: ""
