--- a/data/cities/lewiston/tractor-supply-company.yml
+++ b/data/cities/lewiston/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04240"
 city: Lewiston
 street: "Lisbon Street"
 housenumber: 1619
-phone: "+1-207-795-8828"
-opening_hours: ""
+phone: "+1 207-795-8828"
+opening_hours: "Mo-Sa 08:00-21:00; Su 09:00-19:00"
 website: ""
