--- a/data/cities/palmyra/tractor-supply-company.yml
+++ b/data/cities/palmyra/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04965"
 city: Palmyra
 street: "Main Street"
 housenumber: 1560
-phone: ""
-opening_hours: ""
+phone: "+1 207-368-2299"
+opening_hours: "Mo-Sa 08:00-21:00; Su 09:00-19:00"
 website: ""
