--- a/data/cities/portland/lowes.yml
+++ b/data/cities/portland/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04102"
 city: Portland
 street: "Brighton Avenue"
 housenumber: 1058
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-482-2800"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.lowes.com/store/me-portland/1946"
