--- a/data/cities/presque-isle/lowes.yml
+++ b/data/cities/presque-isle/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04769"
 city: Presque Isle
 street: "Maysville Street"
 housenumber: 135
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-554-3030"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-19:00"
+website: "https://www.lowes.com/store/me-presque-isle/2209"
