--- a/data/cities/rumford/tractor-supply-company.yml
+++ b/data/cities/rumford/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04276"
 city: Rumford
 street: "Valley Circle"
 housenumber: 142
-phone: "+1-207-364-4444"
-opening_hours: ""
+phone: "+1 207-364-4444"
+opening_hours: "Mo-Sa 08:00-21:00; Su 09:00-19:00"
 website: ""
