--- a/data/cities/sanford/lowes.yml
+++ b/data/cities/sanford/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04073"
 city: Sanford
 street: "Main Street"
 housenumber: 1900
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-459-3166"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-20:00"
+website: "https://www.lowes.com/store/me-sanford/2388"
