--- a/data/cities/sanford/tractor-supply-company.yml
+++ b/data/cities/sanford/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04073"
 city: Sanford
 street: "Main Street"
 housenumber: 1770
-phone: ""
-opening_hours: ""
+phone: "+1 207-490-0034"
+opening_hours: "Mo-Sa 08:00-21:00; Su 09:00-19:00"
 website: ""
