--- a/data/cities/south-portland/dicks-sporting-goods.yml
+++ b/data/cities/south-portland/dicks-sporting-goods.yml
@@ -6,6 +6,6 @@ postcode: "04106"
 city: South Portland
 street: "Gorham Road"
 housenumber: 385
-phone: "+1-207-828-4950"
-opening_hours: ""
-website: ""
+phone: "+1 207-828-4950"
+opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-19:00"
+website: "https://stores.dickssportinggoods.com/me/south-portland/165/"
