--- a/data/cities/thomaston/tractor-supply-company.yml
+++ b/data/cities/thomaston/tractor-supply-company.yml
@@ -6,6 +6,6 @@ postcode: "04861"
 city: Thomaston
 street: "Thomaston Commons Way"
 housenumber: 38
-phone: ""
-opening_hours: ""
+phone: "+1 207-594-7200"
+opening_hours: "Mo-Sa 08:00-21:00; Su 09:00-19:00"
 website: ""
