--- a/data/cities/windham/lowes.yml
+++ b/data/cities/windham/lowes.yml
@@ -6,6 +6,6 @@ postcode: "04062"
 city: Windham
 street: "Manchester Drive"
 housenumber: 64
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-893-4016"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-19:00"
+website: "https://www.lowes.com/store/me-windham/2629"
