update content and data

--- a/data/cities/auburn/big-lots.yml
+++ b/data/cities/auburn/big-lots.yml
@@ -6,6 +6,6 @@ postcode: "04210"
 city: Auburn
 street: "Center Street"
 housenumber: 730
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-786-7819"
+opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-21:00"
+website: "https://local.biglots.com/me/auburn/730-center-st"
