--- a/data/cities/auburn/harbor-freight-tools.yml
+++ b/data/cities/auburn/harbor-freight-tools.yml
@@ -6,6 +6,6 @@ postcode: "04210"
 city: Auburn
 street: "Center Street"
 housenumber: 730
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-753-0006"
+opening_hours: "Mo-Sa 08:00-20:00; Su 09:00-18:00"
+website: "https://www.harborfreight.com/storelocator/730-center-street-ste-5b-auburn-04210?number=465"
