--- a/data/cities/augusta/big-lots.yml
+++ b/data/cities/augusta/big-lots.yml
@@ -5,7 +5,7 @@ longitude: -69.79418
 postcode: "04330"
 city: Augusta
 street: "Shaw's Plaza"
-housenumber: 
-phone: "(207) 622-6950"
-opening_hours: ""
-website: "https://local.biglots.com/me/augusta/4525?utm_source=google&utm_medium=distrib&utm_campaign=google-distrib"
+housenumber: 152
+phone: "+1 207-622-6950"
+opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-21:00"
+website: "https://local.biglots.com/me/augusta/4525"
