--- a/data/cities/bangor/harbor-freight-tools.yml
+++ b/data/cities/bangor/harbor-freight-tools.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Springer Drive"
 housenumber: 50
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-262-9967"
+opening_hours: "Mo-Sa 08:00-20:00; Su 09:00-18:00"
+website: "https://www.harborfreight.com/storelocator/50-springer-drive-bangor-04401?number=467"
