--- a/data/cities/south-portland/harbor-freight-tools.yml
+++ b/data/cities/south-portland/harbor-freight-tools.yml
@@ -6,6 +6,6 @@ postcode: "04106"
 city: South Portland
 street: "Western Avenue"
 housenumber: 161
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-253-0364"
+opening_hours: "Mo-Sa 08:00-20:00; Su 09:00-18:00"
+website: "https://www.harborfreight.com/storelocator/161-western-avenue-south-portland-04106?number=478"
