--- a/data/cities/topsham/the-home-depot.yml
+++ b/data/cities/topsham/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04086"
 city: Topsham
 street: "Topsham Fair Mall Road"
 housenumber: 154
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-798-6931"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/topsham/me/topsham/04086/2410"
