--- a/data/cities/waterville/harbor-freight-tools.yml
+++ b/data/cities/waterville/harbor-freight-tools.yml
@@ -1,11 +1,11 @@
-id: 8098063474
-type: node
-latitude: 44.56967
-longitude: -69.6386
+id: 1290341446
+type: way
+latitude: 44.56969
+longitude: -69.63866
 postcode: "04901"
 city: Waterville
 street: "Main Street"
 housenumber: 369
-phone: "+1-207-873-0202"
-opening_hours: "Mo-Sa 08:00-19:00; Su 09:00-18:00"
-website: "https://go.harborfreight.com/store/harbor-freight-tools-in-waterville-me-04901/"
+phone: "+1 207-873-0202"
+opening_hours: "Mo-Sa 08:00-20:00; Su 09:00-18:00"
+website: "https://www.harborfreight.com/storelocator/369-main-street-waterville-04901?number=808"
