--- a/data/cities/waterville/the-home-depot.yml
+++ b/data/cities/waterville/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04901"
 city: Waterville
 street: "Waterville Commons Drive"
 housenumber: 60
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-873-9299"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/waterville/me/waterville/04901/2407"
