--- a/data/cities/windham/the-home-depot.yml
+++ b/data/cities/windham/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04062"
 city: Windham
 street: "Franklin Drive"
 housenumber: 20
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-892-1793"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/north-windham/me/windham/04062/2412"
