--- a/data/cities/auburn/the-home-depot.yml
+++ b/data/cities/auburn/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04210"
 city: Auburn
 street: "Mount Auburn Avenue"
 housenumber: 149
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-777-0042"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/auburn-me/me/auburn/04210/2403"
