--- a/data/cities/augusta/target.yml
+++ b/data/cities/augusta/target.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: "Crossing Way"
 housenumber: 119
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-622-8000"
+opening_hours: "Mo-Sa 08:00-22:00; Su 08:00-21:00"
+website: "https://www.target.com/sl/augusta/2315"
