--- a/data/cities/augusta/the-home-depot.yml
+++ b/data/cities/augusta/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: "Stephen King Drive"
 housenumber: 26
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-621-6888"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/augusta-me/me/augusta/04330/2404"
