--- a/data/cities/bangor/best-buy.yml
+++ b/data/cities/bangor/best-buy.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Bangor Mall Boulevard"
 housenumber: 45
-phone: ""
+phone: "+1 207-942-3434"
 opening_hours: ""
-website: ""
+website: "https://stores.bestbuy.com/me/bangor/45-bangor-mall-blvd-463.html"
