--- a/data/cities/bangor/target.yml
+++ b/data/cities/bangor/target.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Longview Drive"
 housenumber: 60
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-945-3133"
+opening_hours: "Mo-Sa 08:00-22:00; Su 08:00-21:00"
+website: "https://www.target.com/sl/bangor/1855"
