--- a/data/cities/bangor/the-home-depot.yml
+++ b/data/cities/bangor/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
 housenumber: 650
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-990-3133"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/bangor/me/bangor/04401/2414"
