--- a/data/cities/biddeford/target.yml
+++ b/data/cities/biddeford/target.yml
@@ -6,6 +6,6 @@ postcode: "04005"
 city: Biddeford
 street: "Mariner Way"
 housenumber: 430
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-284-2510"
+opening_hours: "Mo-Sa 08:00-22:00; Su 08:00-21:00"
+website: "https://www.target.com/sl/biddeford/2166"
