--- a/data/cities/biddeford/the-home-depot.yml
+++ b/data/cities/biddeford/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04005"
 city: Biddeford
 street: "Alfred Street"
 housenumber: 550
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-284-1115"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/biddeford/me/biddeford/04005/2405"
