--- a/data/cities/ellsworth/the-home-depot.yml
+++ b/data/cities/ellsworth/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04605"
 city: Ellsworth
 street: "Myrick Street"
 housenumber: 56
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-667-1986"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/ellsworth/me/ellsworth/04605/2408"
