--- a/data/cities/portland/the-home-depot.yml
+++ b/data/cities/portland/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: "04103"
 city: Portland
 street: "Riverside Street"
 housenumber: 245
-phone: "+1-207-761-0600"
-opening_hours: ""
-website: ""
+phone: "+1 207-761-0600"
+opening_hours: "Mo-Sa 06:00-22:00; Su 08:00-20:00"
+website: "https://www.homedepot.com/l/portland/me/portland/04103/2401"
