--- a/data/cities/presque-isle/harbor-freight-tools.yml
+++ b/data/cities/presque-isle/harbor-freight-tools.yml
@@ -6,6 +6,6 @@ postcode: "04769"
 city: Presque Isle
 street: "Main Street"
 housenumber: 830
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-554-2800"
+opening_hours: "Mo-Sa 08:00-20:00; Su 09:00-18:00"
+website: "https://www.harborfreight.com/storelocator/830-main-street-suite-g1-presque-isle-04769?number=838"
