--- a/data/cities/rockland/harbor-freight-tools.yml
+++ b/data/cities/rockland/harbor-freight-tools.yml
@@ -6,6 +6,6 @@ postcode: "04841"
 city: Rockland
 street: "Camden Street"
 housenumber: 265
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-593-1069"
+opening_hours: "Mo-Sa 08:00-20:00; Su 09:00-18:00"
+website: "https://www.harborfreight.com/storelocator/265-camden-street-rockland-04841?number=889"
