--- a/data/cities/rockland/the-home-depot.yml
+++ b/data/cities/rockland/the-home-depot.yml
@@ -2,10 +2,10 @@ id: 403558072
 type: way
 latitude: 44.12617
 longitude: -69.10028
-postcode: ""
+postcode: "04841"
 city: Rockland
 street: "Camden Street"
 housenumber: 270
-phone: "+1-207-594-6401"
+phone: "+1 207-594-6401"
 opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-19:00"
 website: "https://www.homedepot.com/l/Rockland-ME/ME/Rockland/04841/2409"
