--- a/data/cities/south-portland/target.yml
+++ b/data/cities/south-portland/target.yml
@@ -6,6 +6,6 @@ postcode: "04106"
 city: South Portland
 street: "Running Hill Road"
 housenumber: 200
-phone: ""
-opening_hours: ""
+phone: "+1 207-871-1156"
+opening_hours: "08:00-22:00"
 website: "https://www.target.com/sl/south-portland/1338"
