--- a/data/cities/topsham/target.yml
+++ b/data/cities/topsham/target.yml
@@ -1,7 +1,7 @@
-id: 7270627922
-type: node
-latitude: 43.93366
-longitude: -69.9854
+id: 987015908
+type: way
+latitude: 43.93394
+longitude: -69.98647
 postcode: "04086"
 city: Topsham
 street: "Topsham Fair Mall Road"
