--- a/data/cities/biddeford/kohls.yml
+++ b/data/cities/biddeford/kohls.yml
@@ -4,8 +4,8 @@ latitude: 43.47857
 longitude: -70.50504
 postcode: "04005"
 city: Biddeford
-street: "Gateway Commons Dr"
+street: "Gateway Commons Drive"
 housenumber: 75
-phone: ""
-opening_hours: ""
+phone: "+1 207-282-4618"
+opening_hours: "Mo-Sa 09:00-21:00; Su 09:00-20:00"
 website: "https://www.kohls.com/stores/me/biddeford-1516.shtml"
