--- a/data/cities/peaks-island/peaks-island-cart-rental-shop.yml
+++ b/data/cities/peaks-island/peaks-island-cart-rental-shop.yml
@@ -8,4 +8,4 @@ street: "Island Avenue"
 housenumber: 62
 phone: "+1 (207) 747-8309"
 opening_hours: ""
-website: "http://peaksislandcarts.com/"
+website: "https://peaksislandcarts.com/"
