--- a/data/cities/port-clyde/port-clyde-kayaks.yml
+++ b/data/cities/port-clyde/port-clyde-kayaks.yml
@@ -8,4 +8,4 @@ street: "Factory Road"
 housenumber: 3
 phone: "(207) 372-8100"
 opening_hours: ""
-website: "http://portclydekayaks.com/contact/"
+website: "https://portclydekayaks.com/contact/"
