--- a/data/cities/portland/east-side-screenprinting.yml
+++ b/data/cities/portland/east-side-screenprinting.yml
@@ -8,4 +8,4 @@ street: "Washington Avenue"
 housenumber: 178
 phone: "+1-207-828-1153"
 opening_hours: ""
-website: "http://eastsidescreenprinting.com/"
+website: "https://eastsidescreenprinting.com/"
