--- a/data/cities/south-portland/shoppers-hardware.yml
+++ b/data/cities/south-portland/shoppers-hardware.yml
@@ -6,6 +6,6 @@ postcode: "04106"
 city: South Portland
 street: "Market Street"
 housenumber: 50
-phone: ""
+phone: "+1 207-799-6191"
 opening_hours: ""
-website: ""
+website: "http://www.truevalue.com/shoppershardware"
