--- a/data/cities/topsham/petco.yml
+++ b/data/cities/topsham/petco.yml
@@ -6,6 +6,6 @@ postcode: "04086"
 city: Topsham
 street: "Topsham Fair Mall Road"
 housenumber: 131
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-721-8680"
+opening_hours: "Mo-Sa 09:00-20:00; Su 10:00-19:00"
+website: "https://stores.petco.com/me/topsham/pet-supplies-topsham-me-1868.html"
