--- a/data/cities/augusta/kohls.yml
+++ b/data/cities/augusta/kohls.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: "Stephen King Drive"
 housenumber: 80
-phone: "+1-207-626-0717"
-opening_hours: ""
+phone: "+1 207-626-0717"
+opening_hours: "Mo-Sa 09:00-21:00; Su 09:00-20:00"
 website: "https://www.kohls.com/stores/me/augusta-173.shtml"
