--- a/data/cities/bangor/petco.yml
+++ b/data/cities/bangor/petco.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
 housenumber: 777
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-945-0049"
+opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-19:00"
+website: "https://stores.petco.com/me/bangor/pet-supplies-bangor-me-1828.html"
