--- a/data/cities/freeport/bridgham-and-cook-ltd.yml
+++ b/data/cities/freeport/bridgham-and-cook-ltd.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 116
 phone: "+1-207-865-1040"
 opening_hours: "10:00-18:00"
-website: "http://www.britishgoods.com"
+website: "https://www.britishgoods.com/"
