--- a/data/cities/freeport/true-value.yml
+++ b/data/cities/freeport/true-value.yml
@@ -6,6 +6,6 @@ postcode: "04032"
 city: Freeport
 street: "US 1"
 housenumber: 262
-phone: ""
+phone: "+1 207-865-9557"
 opening_hours: ""
-website: ""
+website: "http://ww3.ruevalue.com/freeporthardware"
