--- a/data/cities/monmouth/fox.yml
+++ b/data/cities/monmouth/fox.yml
@@ -8,4 +8,4 @@ street: "Academy St."
 housenumber: 80
 phone: "+1-207-933-4178"
 opening_hours: ""
-website: "foxsmallengines.com"
+website: "https://foxsmallengines.com/"
