--- a/data/cities/scarborough/prime-storage.yml
+++ b/data/cities/scarborough/prime-storage.yml
@@ -8,4 +8,4 @@ street: "Pleasant Hill Road"
 housenumber: 8
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://primestorage.com/locations/me/scarborough/ME09/"
