update content and data

--- a/data/cities/sanford/saundarya.yml
+++ b/data/cities/sanford/saundarya.yml
@@ -8,4 +8,4 @@ street: "Washington Street"
 housenumber: 61
 phone: "+1-207-324-4200"
 opening_hours: ""
-website: "http://www.saundaryasalon.com/"
+website: "https://www.saundaryasalon.com/"
