--- a/data/cities/springvale/springvale-hardware.yml
+++ b/data/cities/springvale/springvale-hardware.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 489
 phone: "+1 207-324-2474"
 opening_hours: "Mo-Fr 07:00-18:00; Sa 07:00-17:00; Su 08:30-14:00"
-website: "http://www.truevalue.com/springvalehardware"
+website: "https://www.truevalue.com/springvalehardware"
