--- a/data/cities/south-portland/shoppers-hardware.yml
+++ b/data/cities/south-portland/shoppers-hardware.yml
@@ -8,4 +8,4 @@ street: "Market Street"
 housenumber: 50
 phone: "+1 207-799-6191"
 opening_hours: ""
-website: "http://www.truevalue.com/shoppershardware"
+website: "https://www.truevalue.com/shoppershardware"
