update content and data

--- a/data/cities/belfast/belfast-co-op-and-cafe.yml
+++ b/data/cities/belfast/belfast-co-op-and-cafe.yml
@@ -1,8 +1,8 @@
-id: 2184603383
-type: node
-latitude: 44.42632
-longitude: -69.00549
-postcode: ""
+id: 208137904
+type: way
+latitude: 44.42653
+longitude: -69.00542
+postcode: "04915"
 city: Belfast
 street: "High Street"
 housenumber: 123
