--- a/data/cities/bangor/burlington.yml
+++ b/data/cities/bangor/burlington.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Springer Drive"
 housenumber: 229
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-262-8777"
+opening_hours: "Mo-Th 08:00-22:00; Fr-Sa 09:00-23:00; Su 09:00-22:00"
+website: "https://stores.burlington.com/me/bangor/394"
