--- a/data/cities/south-portland/burlington.yml
+++ b/data/cities/south-portland/burlington.yml
@@ -6,6 +6,6 @@ postcode: "04106"
 city: South Portland
 street: "Running Hill Road"
 housenumber: 200
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-618-7976"
+opening_hours: "09:00-22:00"
+website: "https://stores.burlington.com/me/south-portland/1271"
