update content and data

--- a/data/cities/auburn/joann-fabrics-and-crafts.yml
+++ b/data/cities/auburn/joann-fabrics-and-crafts.yml
@@ -6,6 +6,6 @@ postcode: "04210"
 city: Auburn
 street: "Center Street"
 housenumber: 730
-phone: ""
-opening_hours: ""
+phone: "+1 207-783-1066"
+opening_hours: "Mo-Sa 09:00-19:00; Su 10:00-18:00"
 website: "https://stores.joann.com/me/auburn/875/"
