--- a/data/cities/augusta/sams-club.yml
+++ b/data/cities/augusta/sams-club.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: "Marketplace Drive"
 housenumber: 45
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-623-2757"
+opening_hours: "Mo 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00"
+website: "https://www.samsclub.com/club/augusta-me-sams-club/6462"
