--- a/data/cities/belfast/carquest.yml
+++ b/data/cities/belfast/carquest.yml
@@ -1,7 +1,7 @@
-id: 5667296615
-type: node
-latitude: 44.42552
-longitude: -69.00476
+id: 594356803
+type: way
+latitude: 44.42555
+longitude: -69.00492
 postcode: "04915"
 city: Belfast
 street: "High Street"
