--- a/data/cities/bangor/joann-fabrics-and-crafts.yml
+++ b/data/cities/bangor/joann-fabrics-and-crafts.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
 housenumber: 710
-phone: ""
-opening_hours: ""
+phone: "+1 207-942-6551"
+opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-18:00"
 website: "https://stores.joann.com/me/bangor/873/"
