--- a/data/cities/bangor/sams-club.yml
+++ b/data/cities/bangor/sams-club.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Haskell Road"
 housenumber: 47
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 207-947-4606"
+opening_hours: "Mo 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00"
+website: "https://www.samsclub.com/club/bangor-me-sams-club/6333"
