--- a/data/cities/scarborough/sams-club.yml
+++ b/data/cities/scarborough/sams-club.yml
@@ -1,11 +1,11 @@
-id: 924357356
+id: 156569898
 type: way
-latitude: 43.62396
-longitude: -70.35072
+latitude: 43.62243
+longitude: -70.35287
 postcode: "04074"
 city: Scarborough
 street: "Payne Road"
 housenumber: 440
-phone: ""
-opening_hours: ""
-website: "https://help.samsclub.com/app/answers/detail/a_id/380/~/sams-club-fuel-center-details/"
+phone: "+1 207-883-5553"
+opening_hours: "Mo 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00"
+website: "https://www.samsclub.com/club/scarborough-me-sams-club/8186"
