--- a/data/cities/solon/solon-superette.yml
+++ b/data/cities/solon/solon-superette.yml
@@ -7,5 +7,5 @@ city: Solon
 street: "North Main Street"
 housenumber: 56
 phone: ""
-opening_hours: ""
+opening_hours: "Su 09:00-18:00"
 website: ""
