update content and data

--- a/data/cities/winterport/dollar-general.yml
+++ b/data/cities/winterport/dollar-general.yml
@@ -1,7 +1,7 @@
-id: 5224012814
-type: node
-latitude: 44.64397
-longitude: -68.83972
+id: 1306367074
+type: way
+latitude: 44.64391
+longitude: -68.83938
 postcode: "04496"
 city: Winterport
 street: "North Main Street"
