update content and data

--- a/data/cities/damariscotta/renys-underground.yml
+++ b/data/cities/damariscotta/renys-underground.yml
@@ -1,11 +1,11 @@
-id: 12085322795
+id: 12104759818
 type: node
-latitude: 44.03314
-longitude: -69.53303
+latitude: 44.03249
+longitude: -69.53124
 postcode: "04543"
 city: Damariscotta
 street: "Main Street"
-housenumber: 49
-phone: "+1 207 5638800"
+housenumber: 161
+phone: ""
 opening_hours: ""
 website: ""
