--- a/data/cities/newcastle/belle-jolie.yml
+++ b/data/cities/newcastle/belle-jolie.yml
@@ -1,11 +1,11 @@
-id: 12104722661
+id: 12104722660
 type: node
 latitude: 44.03371
-longitude: -69.5349
+longitude: -69.53494
 postcode: "04553"
 city: Newcastle
 street: "Main Street"
-housenumber: 77
-phone: ""
+housenumber: 77C
+phone: "+1 207 6820199"
 opening_hours: ""
 website: ""
