--- a/data/cities/damariscotta/s-fernalds-country-store.yml
+++ b/data/cities/damariscotta/s-fernalds-country-store.yml
@@ -7,5 +7,5 @@ city: Damariscotta
 street: "Main Street"
 housenumber: 50
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Sa 08:00-16:00"
 website: ""
