update content and data

--- a/data/cities/fairfield/village-market.yml
+++ b/data/cities/fairfield/village-market.yml
@@ -1,11 +1,11 @@
-id: 7289268355
-type: node
-latitude: 44.58079
-longitude: -69.60525
+id: 1309452845
+type: way
+latitude: 44.58396
+longitude: -69.59904
 postcode: "04937"
 city: Fairfield
 street: "Main Street"
-housenumber: 44
+housenumber: 95
 phone: ""
 opening_hours: ""
 website: ""
