--- a/data/cities/gorham/redeemer-lutheran-church.yml
+++ b/data/cities/gorham/redeemer-lutheran-church.yml
@@ -1,7 +1,7 @@
-id: 11067031502
-type: node
-latitude: 43.68771
-longitude: -70.41679
+id: 1309032414
+type: way
+latitude: 43.68776
+longitude: -70.41692
 postcode: "04038"
 city: Gorham
 street: "Main Street"
