update content and data

--- a/data/cities/lubec/mcfaddens-variety.yml
+++ b/data/cities/lubec/mcfaddens-variety.yml
@@ -1,7 +1,7 @@
-id: 7214978712
-type: node
-latitude: 44.84104
-longitude: -67.0149
+id: 1311616844
+type: way
+latitude: 44.84114
+longitude: -67.01482
 postcode: "04652"
 city: Lubec
 street: "County Road"
