--- a/data/cities/auburn/big-apple.yml
+++ b/data/cities/auburn/big-apple.yml
@@ -1,11 +1,11 @@
-id: 681661113
+id: 695502130
 type: way
-latitude: 44.08234
-longitude: -70.2564
+latitude: 44.0916
+longitude: -70.22576
 postcode: "04210"
 city: Auburn
-street: "Minot Avenue"
-housenumber: 709
+street: "Main Street"
+housenumber: 296
 phone: ""
 opening_hours: ""
 website: ""
