--- a/data/cities/lubec/clutter-shop-antiques.yml
+++ b/data/cities/lubec/clutter-shop-antiques.yml
@@ -1,7 +1,7 @@
-id: 7214978719
-type: node
-latitude: 44.83693
-longitude: -67.02333
+id: 1311754724
+type: way
+latitude: 44.83695
+longitude: -67.02319
 postcode: "04652"
 city: Lubec
 street: "County Road"
