update content and data

--- a/data/cities/augusta/five-below.yml
+++ b/data/cities/augusta/five-below.yml
@@ -6,6 +6,6 @@ postcode: "04330"
 city: Augusta
 street: Stephen King Drive
 housenumber: "80"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1 207-621-0078
+opening_hours: Mo-Sa 10:00-21:00; Su 10:00-20:00
+website: https://locations.fivebelow.com/me/augusta/80-steven-king-dr
