--- a/data/cities/portland/cumberland-farms.yml
+++ b/data/cities/portland/cumberland-farms.yml
@@ -1,11 +1,11 @@
-id: 7170757796
+id: 397367057
 type: node
-latitude: 43.6865
-longitude: -70.26847
+latitude: 43.68631
+longitude: -70.29294
 postcode: "04103"
 city: Portland
-street: Washington Avenue
-housenumber: "801"
+street: Forest Avenue
+housenumber: "1136"
 phone: ""
 opening_hours: ""
 website: ""
