--- a/data/cities/augusta/hannaford.yml
+++ b/data/cities/augusta/hannaford.yml
@@ -1,11 +1,11 @@
-id: 372178078
+id: 410625232
 type: node
-latitude: 44.31372
-longitude: -69.81278
+latitude: 44.31602
+longitude: -69.76456
 postcode: "04330"
 city: Augusta
-street: Whitten Road
-housenumber: "29"
-phone: +1 207-622-3137
+street: Cony Street
+housenumber: "118"
+phone: +1 207-621-2570
 opening_hours: Mo-Sa 07:00-22:00; Su 07:00-21:00
-website: https://stores.hannaford.com/me/augusta/8239
+website: https://stores.hannaford.com/me/augusta/8250
