--- a/data/cities/kittery/7-eleven.yml
+++ b/data/cities/kittery/7-eleven.yml
@@ -1,11 +1,11 @@
-id: 92932088
+id: 413682226
 type: node
-latitude: 43.10958
-longitude: -70.73627
+latitude: 43.09978
+longitude: -70.74457
 postcode: "03904"
 city: Kittery
-street: US Route 1;Route 1
-housenumber: "286"
-phone: +1 207-703-2091
+street: State Road
+housenumber: "169"
+phone: ""
 opening_hours: ""
-website: https://www.7-eleven.com/locations/me/kittery/286-us-1-39909
+website: ""
