update content and data

--- a/data/cities/orono/rose-bike-shop.yml
+++ b/data/cities/orono/rose-bike-shop.yml
@@ -1,11 +1,11 @@
 id: 876354113
 type: node
-latitude: 44.88224
+latitude: 44.88225
 longitude: -68.67212
 postcode: "04473"
 city: Orono
 street: Pine Street
 housenumber: "9"
 phone: +1-207-866-3525
-opening_hours: ""
+opening_hours: Mo-Fr 10:00-18:00; Sa 09:00-17:00; Su off
 website: https://www.rosebike.com/
