--- a/data/cities/richmond/ames-mill-storage.yml
+++ b/data/cities/richmond/ames-mill-storage.yml
@@ -4,8 +4,8 @@ latitude: 44.08626
 longitude: -69.80006
 postcode: "04357"
 city: Richmond
-street: 307 Front St
-housenumber: ""
+street: Front Street
+housenumber: "307"
 phone: +1 207-737-4448
 opening_hours: Mo-Fr 10:00-16:00
 website: https://amesmillstorage.com
