update content and data

--- a/data/cities/augusta/supercuts.yml
+++ b/data/cities/augusta/supercuts.yml
@@ -1,11 +1,11 @@
-id: 884227638
+id: 886546431
 type: node
-latitude: 44.31428
-longitude: -69.80414
+latitude: 44.34447
+longitude: -69.78887
 postcode: "04330"
 city: Augusta
-street: Senator Way
-housenumber: "5"
-phone: "+12072136698"
+street: Stephen King Drive
+housenumber: "1"
+phone: ""
 opening_hours: ""
-website: https://www.supercuts.com/locations/me/augusta/journal-square-retail-center-haircuts-81344.html
+website: ""
