--- a/data/cities/berwick/berwick-self-storage.yml
+++ b/data/cities/berwick/berwick-self-storage.yml
@@ -1,11 +1,11 @@
-id: 7344117465
+id: 1327652392
 type: node
-latitude: 43.26421
-longitude: -70.78086
+latitude: 43.26412
+longitude: -70.78132
 postcode: "03901"
 city: Berwick
 street: Portland Street
-housenumber: "474"
+housenumber: 474;472
 phone: +1-207-384-5400
 opening_hours: 24/7
 website: https://www.BerwickStorage.com
