--- a/data/cities/augusta/u-s-cellular.yml
+++ b/data/cities/augusta/u-s-cellular.yml
@@ -1,11 +1,11 @@
-id: 884227636
+id: 886546433
 type: node
-latitude: 44.31455
-longitude: -69.80418
+latitude: 44.34458
+longitude: -69.78883
 postcode: "04330"
 city: Augusta
-street: Senator Way
-housenumber: "5"
-phone: "+12076227800"
+street: Stephen King Drive
+housenumber: "1"
+phone: ""
 opening_hours: ""
-website: https://local.uscellular.com/maine/augusta/5-senator-way/
+website: ""
