--- a/data/cities/portland/7-eleven.yml
+++ b/data/cities/portland/7-eleven.yml
@@ -1,11 +1,11 @@
-id: 398076941
+id: 400356080
 type: node
-latitude: 43.66465
-longitude: -70.25141
-postcode: "04101"
+latitude: 43.65274
+longitude: -70.26848
+postcode: "04102"
 city: Portland
-street: Washington Avenue
-housenumber: "27"
-phone: +1-207-775-5260
+street: Congress Street
+housenumber: "704"
+phone: +1-207-871-1483
 opening_hours: ""
 website: ""
