update content and data

--- a/data/cities/boothbay-harbor/enchantments.yml
+++ b/data/cities/boothbay-harbor/enchantments.yml
@@ -4,7 +4,7 @@ latitude: 43.85074
 longitude: -69.62888
 postcode: "04538"
 city: Boothbay Harbor
-street: Boothbay House Hill
+street: Boothbay House Hill Road
 housenumber: "10"
 phone: ""
 opening_hours: ""
