update content and data

--- a/data/cities/jackman/mountain-country-supermarket.yml
+++ b/data/cities/jackman/mountain-country-supermarket.yml
@@ -4,7 +4,7 @@ latitude: 45.63212
 longitude: -70.26268
 postcode: "04945"
 city: Jackman
-street: US 201
+street: Main Street
 housenumber: "544"
 phone: ""
 opening_hours: ""
