--- a/data/cities/jackman/napa-auto-parts.yml
+++ b/data/cities/jackman/napa-auto-parts.yml
@@ -4,7 +4,7 @@ latitude: 45.62407
 longitude: -70.2529
 postcode: "04945"
 city: Jackman
-street: US 201
+street: Main Street
 housenumber: "414"
 phone: ""
 opening_hours: ""
