update content and data

--- a/data/cities/blue-hill/mikes-market-ii.yml
+++ b/data/cities/blue-hill/mikes-market-ii.yml
@@ -7,5 +7,5 @@ city: Blue Hill
 street: Mines Rd
 housenumber: "75"
 phone: +1 -207-374-9290
-opening_hours: 'Monday-Saturday: 5:30AM to 8:00PM, Sunday: 6:00AM to 7:30PM'
+opening_hours: Mo-Sa 05:30-20:00; Su 06:00-19:30
 website: https://mikesmarketii.com
