--- a/data/cities/belfast/belfast-harbor-artisans.yml
+++ b/data/cities/belfast/belfast-harbor-artisans.yml
@@ -8,4 +8,4 @@ street: Main Street
 housenumber: "69"
 phone: +1-207-338-2088
 opening_hours: Mo-Sa 10:00-18:00; Su 10:00-17:00
-website: https://www.facebook.com/belfastharborartisans
+website: https://www.instagram.com/belfastharborartisans/?hl=en
