--- a/data/cities/belfast/moonbat-city-baking-company.yml
+++ b/data/cities/belfast/moonbat-city-baking-company.yml
@@ -8,4 +8,4 @@ street: Main Street
 housenumber: "137"
 phone: +1-207-218-1039
 opening_hours: Mo-Th 07:00-13:00
-website: https://www.facebook.com/moonbat-city-baking-co-144695512366356/
+website: ""
