update content and data

--- a/data/cities/frenchville/northern-roots-salon-and-spa.yml
+++ b/data/cities/frenchville/northern-roots-salon-and-spa.yml
@@ -1,11 +1,11 @@
-id: 7503425764
+id: 1056887054
 type: node
-latitude: 47.28794
-longitude: -68.37191
+latitude: 47.28776
+longitude: -68.37202
 postcode: "04745"
 city: Frenchville
 street: Route 1
 housenumber: "238"
 phone: +1 207-543-2058
-opening_hours: ""
+opening_hours: Mo 09:00-17:00; Tu-Th 08:00-18:00; Fr-Sa 08:00-17:00
 website: https://northernrootssalonandspa.business.site
