--- a/data/cities/belfast/cg-bikes.yml
+++ b/data/cities/belfast/cg-bikes.yml
@@ -8,4 +8,4 @@ street: Northport Avenue
 housenumber: "34"
 phone: +1-207-218-1206
 opening_hours: 'Mo-Sa 10:00-17:00; '
-website: http://cgbikesmaine.com/
+website: https://cgbikesmaine.com/
