update content and data

--- a/data/cities/bangor/critter-clippers.yml
+++ b/data/cities/bangor/critter-clippers.yml
@@ -7,5 +7,5 @@ city: Bangor
 street: Hammond Street
 housenumber: "584"
 phone: ""
-opening_hours: Mo-Tu, Th-Sa || by appointment
+opening_hours: Mo-Tu, Th-Sa "by appointment"
 website: https://www.critterclippers.co/
