--- a/data/cities/fort-kent/napa-auto-parts.yml
+++ b/data/cities/fort-kent/napa-auto-parts.yml
@@ -7,5 +7,5 @@ city: Fort Kent
 street: Market Street
 housenumber: "3"
 phone: +1-207-834-3903
-opening_hours: Mo-Fr 07:00-17:30; Sat 07:00-14:00
+opening_hours: Mo-Fr 07:00-17:30; Sa 07:00-14:00
 website: https://www.napaonline.com/en/ME/Fort-Kent/store/21736
