--- a/data/cities/bangor/chapel-hill-floral.yml
+++ b/data/cities/bangor/chapel-hill-floral.yml
@@ -7,5 +7,5 @@ city: Bangor
 street: Hammond Street
 housenumber: "453"
 phone: +1-207-942-7386
-opening_hours: Mo-Fri 08:00-17:00, Sa 08:00-12:00
+opening_hours: Mo-Fr 08:00-17:00, Sa 08:00-12:00
 website: https://www.chapelhillfloral.com
