--- a/data/cities/bangor/teasers-styling-salon.yml
+++ b/data/cities/bangor/teasers-styling-salon.yml
@@ -7,5 +7,5 @@ city: Bangor
 street: Union Street
 housenumber: "510"
 phone: +1-207-942-7000
-opening_hours: Tu-We, Fr 10:00-20:00 Sa 09:00-19:00
+opening_hours: Tu-We, Fr 10:00-20:00; Sa 09:00-19:00
 website: ""
