--- a/data/cities/fryeburg/studio-22.yml
+++ b/data/cities/fryeburg/studio-22.yml
@@ -7,5 +7,5 @@ city: Fryeburg
 street: Portland Street
 housenumber: "22"
 phone: 207-256-3122
-opening_hours: 'Wednesdays: by chance Thursdays: 11-5 Fridays: 11-5 Saturdays: 11-5'
+opening_hours: Th-Sa 11:00-17:00; We "by chance"
 website: ""
