update content and data

--- a/data/cities/scarborough/len-libby-candy-shop.yml
+++ b/data/cities/scarborough/len-libby-candy-shop.yml
@@ -7,5 +7,5 @@ city: Scarborough
 street: Route 1
 housenumber: "419"
 phone: +1-207-883-4897
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-17:00; Su closed
 website: https://www.lenlibby.com/
