update content and data

--- a/data/cities/monson/poets-gear-emporium.yml
+++ b/data/cities/monson/poets-gear-emporium.yml
@@ -6,6 +6,6 @@ postcode: "04464"
 city: Monson
 street: Pleasant Street
 housenumber: "13"
-phone: ""
-opening_hours: ""
+phone: +1-207-997-3597
+opening_hours: Mo-Su 08:00-11:00,14:00-17:00
 website: https://thegearemporium.com
