update content and data

--- a/data/cities/bar-harbor/acadia-trading-post.yml
+++ b/data/cities/bar-harbor/acadia-trading-post.yml
@@ -6,6 +6,6 @@ postcode: "04609"
 city: Bar Harbor
 street: Main Street
 housenumber: "70"
-phone: ""
+phone: +1-207-373-9927
 opening_hours: ""
-website: ""
+website: https://www.atpbh.com
