--- a/data/cities/brunswick/the-ups-store.yml
+++ b/data/cities/brunswick/the-ups-store.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "135"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1 (207) 729-9891
+opening_hours: Mo-Fr 07:30-18:00; Sa 09:30-15:00; Su 10:00-15:00
+website: https://locations.theupsstore.com/me/brunswick/135-maine-st
