--- a/data/cities/frenchville/northern-roots-salon-and-spa.yml
+++ b/data/cities/frenchville/northern-roots-salon-and-spa.yml
@@ -4,7 +4,7 @@ latitude: 47.28776
 longitude: -68.37202
 postcode: "04745"
 city: Frenchville
-street: Route 1
+street: Main Street
 housenumber: "238"
 phone: +1 207-543-2058
 opening_hours: Mo 09:00-17:00; Tu-Th 08:00-18:00; Fr-Sa 08:00-17:00
