--- a/data/cities/bath/the-library-book-shop.yml
+++ b/data/cities/bath/the-library-book-shop.yml
@@ -7,5 +7,5 @@ city: Bath
 street: Front Street
 housenumber: "194"
 phone: +1-207-443-1161
-opening_hours: ""
-website: ""
+opening_hours: 10:00-16:00
+website: https://pattenfreelibrary.org/the-library-bookstore/
