--- a/data/cities/frenchville/jims-corner-grocery.yml
+++ b/data/cities/frenchville/jims-corner-grocery.yml
@@ -4,7 +4,7 @@ latitude: 47.28096
 longitude: -68.37937
 postcode: "04745"
 city: Frenchville
-street: Route 1
+street: Main Street
 housenumber: "269"
 phone: +1-207-543-6788
 opening_hours: Mo-Sa 06:00-21:00; Su 09:00-20:00
