--- a/data/cities/frenchville/natalies-cuts-n-creations.yml
+++ b/data/cities/frenchville/natalies-cuts-n-creations.yml
@@ -4,7 +4,7 @@ latitude: 47.31629
 longitude: -68.37911
 postcode: "04745"
 city: Frenchville
-street: Route 1
+street: Main Street
 housenumber: "141"
 phone: +1-207-543-7700
 opening_hours: ""
