update content and data

--- a/data/cities/brunswick/sun-tan-city.yml
+++ b/data/cities/brunswick/sun-tan-city.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Bath rd
 housenumber: "147"
-phone: ""
-opening_hours: Mo-Fr 08:00am-07:00pm Sa 09:00am-05:30pm Su 11:00am-05:00pm0
+phone: +1 207-798-4826
+opening_hours: Mo-Fr 08:00-19:00; Sa 09:00-17:30; Su 11:00-17:00
 website: ""
