update content and data

--- a/data/cities/brunswick/marathon-sports.yml
+++ b/data/cities/brunswick/marathon-sports.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "89"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-721-9299
+opening_hours: Mo-Sa 10:00-18; 00; Su 11:00-16:00
+website: https://www.marathonsports.com/locations/brunswick
