--- a/data/cities/topsham/lamey-wellehan-shoes.yml
+++ b/data/cities/topsham/lamey-wellehan-shoes.yml
@@ -6,6 +6,6 @@ postcode: "04086"
 city: Topsham
 street: Topsham Fair Mall Road
 housenumber: "65"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1 (207) 504-5093
+opening_hours: Mo-Sa 09:00-18:00; Su 11:00-17:00
+website: https://www.lwshoes.com/pages/locations
