update content and data

--- a/data/cities/bar-harbor/hidden-barn-books.yml
+++ b/data/cities/bar-harbor/hidden-barn-books.yml
@@ -8,4 +8,4 @@ street: Kennebec Place
 housenumber: "31"
 phone: "12072880545"
 opening_hours: Mo-Sa 10:00-16:00
-website: http://www.hiddenbarnbooks.com
+website: https://hiddenbarnbooks.com/
