--- a/data/cities/frenchville/mer-and-boys-collision-center.yml
+++ b/data/cities/frenchville/mer-and-boys-collision-center.yml
@@ -4,7 +4,7 @@ latitude: 47.28011
 longitude: -68.4465
 postcode: "04745"
 city: Frenchville
-street: Route 1
+street: Main Street
 housenumber: "489"
 phone: ""
 opening_hours: ""
