update content and data

--- a/data/cities/bath/halcyon-yarn.yml
+++ b/data/cities/bath/halcyon-yarn.yml
@@ -7,5 +7,5 @@ city: Bath
 street: School Street
 housenumber: "12"
 phone: +1-800-341-0282
-opening_hours: ""
+opening_hours: Th-Fr 10:00-17:00; Sa 10:00-16:00
 website: https://halcyonyarn.com/
