--- a/data/cities/brunswick/magpie.yml
+++ b/data/cities/brunswick/magpie.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "66"
-phone: ""
+phone: +1-207-844-8488
 opening_hours: ""
-website: ""
+website: https://www.magpieonmaine.com/
