--- a/data/cities/brunswick/starz-hair-studio.yml
+++ b/data/cities/brunswick/starz-hair-studio.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "64"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-721-0045
+opening_hours: Mo 10:00-1800; Tu-Fr 10:17:00; Sa 10:00-14:00
+website: https://www.starzhairstudio.com/
