--- a/data/cities/brunswick/hatch-on-maine.yml
+++ b/data/cities/brunswick/hatch-on-maine.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "96"
-phone: ""
-opening_hours: ""
+phone: +1-207-373-0567
+opening_hours: Mo-Sa 10:00-17:00; Su 11:00-16:00
 website: ""
