--- a/data/cities/freeport/royal-river-natural-foods.yml
+++ b/data/cities/freeport/royal-river-natural-foods.yml
@@ -4,8 +4,8 @@ latitude: 43.83518
 longitude: -70.12601
 postcode: "04032"
 city: Freeport
-street: Us Route One
+street: US Route One
 housenumber: "443"
 phone: +1-207-865-0046
-opening_hours: ""
+opening_hours: Mo-Sa 08:00-19:00; Su 10:00-18:00
 website: https://www.rrnf.com/
