update content and data

--- a/data/cities/brunswick/brick-house-fabrics.yml
+++ b/data/cities/brunswick/brick-house-fabrics.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Pleasant Street
 housenumber: "4"
-phone: ""
-opening_hours: ""
+phone: +1-207-221-3584
+opening_hours: "off"
 website: ""
