--- a/data/cities/brunswick/pura-vida-day-spa.yml
+++ b/data/cities/brunswick/pura-vida-day-spa.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "138"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-725-1233
+opening_hours: 'Mo 10:00-18:00; Tu-Th 09:00-19:00; Fr 09:00-17:00; Sa 09:00-16:00; '
+website: https://mysite.vagaro.com/puravidadayspa
