--- a/data/cities/brunswick/ritual-bakehouse-and-patisserie.yml
+++ b/data/cities/brunswick/ritual-bakehouse-and-patisserie.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "111"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-406-4079
+opening_hours: Mo-We off; Th-Fr 07:00-14:00; Sa-Su 07:00-12:00
+website: https://ritualbakehouse.com/
