--- a/data/cities/owls-head/owls-head-general-store.yml
+++ b/data/cities/owls-head/owls-head-general-store.yml
@@ -6,6 +6,6 @@ postcode: "04854"
 city: Owls Head
 street: South Shore Drive
 housenumber: "2"
-phone: ""
-opening_hours: ""
-website: https://www.facebook.com/pages/Owls-Head-General-Store/115841441781084
+phone: 1-207-466-9046
+opening_hours: We-Mo 07:00-19:00
+website: Owlsheadgeneralstore.com
