--- a/data/cities/brunswick/christian-science-reading-room.yml
+++ b/data/cities/brunswick/christian-science-reading-room.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "206"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-729-0317
+opening_hours: Mo-Fr 10:00-14:00; Sa[2,4] 10:00-12:00; PH off
+website: https://www.christiansciencebrunswick.org/reading-room/
