--- a/data/cities/brunswick/cool-as-a-moose.yml
+++ b/data/cities/brunswick/cool-as-a-moose.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "128"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-373-9920
+opening_hours: Mo-Su 10:00-18:00
+website: https://www.coolasamoose.com/
