--- a/data/cities/brunswick/lemont-block-collective.yml
+++ b/data/cities/brunswick/lemont-block-collective.yml
@@ -6,6 +6,6 @@ postcode: "04011"
 city: Brunswick
 street: Maine Street
 housenumber: "150"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-207-371-0115
+opening_hours: Mo-Sa 10:00-17:00; Su 10:00-16:00
+website: https://lemontblockcollective.com/
